--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/multires_image
-	previous = 
-	base = 04d1faca
+	previous = 04d1faca
+	base = aec1a9d8
 	trim = 
 	trimbase = 
