--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 4f49e472
+	base = a5fce7af
 	trim = tile_map
-	trimbase = 
+	trimbase = 4f49e472
