--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 9f89520f
+	base = a6395bd4
 	trim = mapviz_interfaces
-	trimbase = 
+	trimbase = 9f89520f
