--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 5ca4e75e
+	base = 558caecf
 	trim = mapviz
-	trimbase = 
+	trimbase = 5ca4e75e
