--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = dc8d34f2
+	base = 5b856bd0
 	trim = multires_image
-	trimbase = 
+	trimbase = dc8d34f2
