--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 42f4b318
+	base = c3d29165
 	trim = mapviz_plugins
-	trimbase = 
+	trimbase = 42f4b318
