--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = b2fb8ad5
+	base = 4fa9d7af
 	trim = tile_map
-	trimbase = 
+	trimbase = b2fb8ad5
