--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 563c0b45
+	base = eb57ab41
 	trim = mapviz_interfaces
-	trimbase = 
+	trimbase = 563c0b45
