--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = af34dc02
+	base = e65df67b
 	trim = mapviz
-	trimbase = 
+	trimbase = af34dc02
