--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = ec27fc0c
+	base = 12f2f8cc
 	trim = multires_image
-	trimbase = 
+	trimbase = ec27fc0c
