--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a92dfe25
-	base = 3c9533c8
+	base = c45b7567
 	trim = mapviz_plugins
-	trimbase = 
+	trimbase = 3c9533c8
