--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a071de6d
-	base = 0f2a28d5
+	base = 33b2755d
 	trim = tile_map
-	trimbase = 
+	trimbase = 0f2a28d5
