--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a071de6d
-	base = 0ae66db4
+	base = d7be985b
 	trim = mapviz
-	trimbase = 
+	trimbase = 0ae66db4
