--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a071de6d
-	base = e0dd631b
+	base = 9ba174f8
 	trim = multires_image
-	trimbase = 
+	trimbase = e0dd631b
