--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a071de6d
-	base = 731bafd4
+	base = 138819e0
 	trim = mapviz_plugins
-	trimbase = 
+	trimbase = 731bafd4
