--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = mapviz_plugins
-	base = 2d2a1bcb
-	trimbase = 
+	base = d4fd8926
+	trimbase = 2d2a1bcb
 	parent = upstream
 	previous = 30eb66d9
