--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = tile_map
-	base = a81de56d
-	trimbase = 
+	base = 82cc88ae
+	trimbase = a81de56d
 	parent = upstream
 	previous = 30eb66d9
