--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = mapviz
-	base = d5730b12
-	trimbase = 
+	base = 2124bfae
+	trimbase = d5730b12
 	parent = upstream
 	previous = 30eb66d9
