--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multires_image
-	base = fe130281
-	trimbase = 
+	base = 43194d61
+	trimbase = fe130281
 	parent = upstream
 	previous = 30eb66d9
