--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30eb66d9
-	base = 7b666f0e
+	base = 24966acd
 	trim = mapviz_plugins
-	trimbase = 
+	trimbase = 7b666f0e
