--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30eb66d9
-	base = b295cc72
+	base = daaa1cdc
 	trim = tile_map
-	trimbase = 
+	trimbase = b295cc72
