--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30eb66d9
-	base = 1659cb89
+	base = b08c4a13
 	trim = mapviz
-	trimbase = 
+	trimbase = 1659cb89
