--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30eb66d9
-	base = ab1da95a
+	base = f23c3af1
 	trim = multires_image
-	trimbase = 
+	trimbase = ab1da95a
