--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a3bcbe98
-	base = 7a85c70a
+	base = 30ac7561
 	trim = mapviz
-	trimbase = 
+	trimbase = 7a85c70a
