--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a3bcbe98
-	base = 51ebcbd8
+	base = d9700ea3
 	trim = tile_map
-	trimbase = 
+	trimbase = 51ebcbd8
