--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a3bcbe98
-	base = 03f45c14
+	base = f96f4c3c
 	trim = multires_image
-	trimbase = 
+	trimbase = 03f45c14
