--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a3bcbe98
-	base = 4436cfcc
+	base = 2f2b80f0
 	trim = mapviz_plugins
-	trimbase = 
+	trimbase = 4436cfcc
